package utils;

import java.util.Iterator;

public class List<T> implements IDataStructure<T>, Iterable<T> {
    
    ListNode<T> first;
    public T peek(){
        if (first != null) {
            return first.getData();
        } else {
            return null;
        }
    }

    public List<T> insert(T data, int index) {
        if (first == null && (index == 0 || index == -1)) {
            first = new ListNode<T>(data);
        } else if (index == 0) {
            insertFirst(new ListNode<T>(data));
        } else if (index == -1) {
            insertLast(new ListNode<T>(data));
        } else if (index > 0) {
            insertAt(new ListNode<T>(data), index);
        } else {
            throw new IndexOutOfBoundsException();
        }
        return this;
    }

    private void insertFirst(ListNode<T> listNode) {
        listNode.setNext(first);
        first = listNode;
    }

    private void insertLast(ListNode<T> listNode) {
        ListNode<T> last = first;
        while (last.getNext() != null) {
            last = last.getNext();
        }
        last.setNext(listNode);
    }

    private void insertAt(ListNode<T> listNode, int index) {
        int i = 0;
        ListNode<T> current = first;
        while (i < index - 1 && current != null) {
            ++i;
            current = current.getNext();
        }
        if (current != null) {
            listNode.setNext(current.getNext());
            current.setNext(listNode);
        } else {
            throw new IndexOutOfBoundsException();
        }
    }

    public List<T> remove(int index) {
        if (getFirst() != null) {
            if (index == 0) {
                removeFirst();
            } else if (index == -1) {
                removeLast();
            } else {
                removeAt(index);
            }

        } else {
            throw new IndexOutOfBoundsException();
        }
        return this;
    }

    private void removeFirst() {
        first = getFirst().getNext();
    }

    private void removeLast() {
        if (getFirst().getNext() != null) {
            ListNode<T> oneBeforeLast = getFirst();
            while (oneBeforeLast.getNext() != null && oneBeforeLast.getNext().getNext() != null) {
                oneBeforeLast = oneBeforeLast.getNext();
            }
            oneBeforeLast.setNext(null);
        } else {
            first = null;
        }
    }

    private void removeAt(int index) {
        ListNode<T> current = first;
        for (int i = 0; i < index - 1; ++i) {
            current = current.getNext();
            if (current == null) {
                throw new IndexOutOfBoundsException();
            }
        }
        if (current.getNext() == null) {
            throw new IndexOutOfBoundsException();
        }
        current.setNext(current.getNext().getNext());
    }

    public ListNode<T> getFirst() {
        return first;
    }

    public boolean isEmpty() {
        return getFirst() == null;
    }

    public int size() {
        if (first != null) {
            return first.count();
        } else {
            return 0;
        }
    }

    public Object[] listData() {
        Object[] array = new Object[size()];
        ListNode<T> listNode = first;
        for (int i = 0; i < array.length; ++i) {
            array[i] = listNode.getData();
            listNode = listNode.getNext();
        }
        return array;
    }

    @Override
    public Iterator<T> iterator() {
        return new ListIterator();
    }

    private class ListIterator implements Iterator<T> {

        private ListNode<T> current = first;

        @Override
        public boolean hasNext() {
            return current != null;
        }

        @Override
        public T next() {
            if (!hasNext()) {
                throw new IllegalStateException("No more elements in the list.");
            }
            T data = current.getData();
            current = current.getNext();
            return data;
        }
    }
}