package utils;

public class Shortcut {
    static public void print(Object o) {
        System.out.println(o);
    }
}
