package utils;

public interface TreeObject {
    //public void setData(Object data);
    public Object getDetails();
}